tests/templates/onpremises/02-full-cilium-haproxy/baseline/manifests/networking/policies/whisker/whisker.yaml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whisker-ingress-haproxy
  namespace: calico-system
  labels:
    cluster.kfd.sighup.io/module: networking
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: whisker
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-haproxy
        podSelector:
          matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            app.kubernetes.io/instance: haproxy-ingress
      ports:
        - port: 8081
          protocol: TCP
